feat: phase 1 — multi-downstream, CEL policy engine, audit logging
Add multi-downstream server support with tool/resource namespacing
(double-underscore separator), CEL-based policy engine with
first-match-wins evaluation and fail-closed default, and
context-based audit logging enriching every request with server,
tool/resource, and policy decision fields.

Breaking change: config format moves from `downstream:` (singular)
to `downstreams:` (map) with explicit error on old format.

--- a/testdata/config/valid.yaml
+++ b/testdata/config/valid.yaml
@@ -1,7 +1,16 @@
-downstream:
-  command: ./testdata/echoserver/echoserver
-  args:
-    - --verbose
-  env:
-    - FOO=bar
+downstreams:
+  echoserver:
+    command: ./testdata/echoserver/echoserver
+    args:
+      - --verbose
+    env:
+      - FOO=bar
+  another:
+    command: ./another-server
+policy:
+  default: deny
+  rules:
+    - name: allow-echo
+      expression: 'server == "echoserver" && tool.name == "echo"'
+      effect: allow
 log_level: debug
